trunk/Archive2/76/df72df6ed9e8ac/output
main.cpp: In function 'int main2()':
main.cpp:39:18: error: 'Forex' was not declared in this scope
     std::cout << Forex << std::endl;
                  ^
main.cpp:39:18: note: suggested alternative:
main.cpp:12:2: note:   'Forex'
  Forex = 4,
  ^
